crates/stef-compiler/tests/inputs/invalid/resolve_sub_nested.stef
struct Sample {
    value: inner::a::b::c::Other @1,
}

mod inner {
    mod a {
        mod b {
            mod c {}
        }
    }
}
